feat(iaas): initial onboarding (#6)
relates to STACKITSDK-209